fix ipad air collapsed edition menu

--- a/static/src/stylesheets/layout/new-header/_menu-group.scss
+++ b/static/src/stylesheets/layout/new-header/_menu-group.scss
@@ -129,8 +129,10 @@
     }
 
     .menu-group .menu-item {
-        display: inline-block;
-        width: auto;
+        @include mq(desktop) {
+            display: inline-block;
+            width: auto;
+        }
     }
 }
 
